Sat Apr 19 17:10:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (dirswitch): If directory ends in '/', complain.

Fri Apr 18 18:09:57 1997  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (apply_rcs_changes): New static function, broken out of
	RCS_deltas.
	(RCS_deltas): Call it.
	(linevector_add): Change return type to int.  Return an indication
	of an error for an invalid add, rather than calling error.

Fri Apr 18 11:24:26 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.9.

	* version.c: Version 1.9.8.

	* commit.c (struct find_data): Add field force.
	(find_fileproc, commit): Use it instead of force_ci to decide
	whether to send files to server.
	(commit): Set it if either -f or -r is specified.
	* sanity.sh (basica): Add tests basica-8a0, basica-8a1, and
	basica-8a2; tests for above fix.

Wed Apr 16 11:50:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* zlib.c: Remove paragraph with Free Software Foundation address.
	See 2 Jan 1997 entry in ../ChangeLog for rationale.

Tue Apr 15 00:36:23 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (patch_file_write): Always assign to final_nl, so that
	it ends up reflecting whether the data from the last call had a
	newline, not whether the data from any of the calls ended in a
	newline.  Doesn't matter with the current RCS_checkout
	implementation, but it will if RCS_checkout is changed to pass
	less than the entire file.

	* rcs.c (RCS_cmp_file): Change NULL to RUN_TTY in passing sout to
	RCS_checkout, for clarity.

	* import.c (update_rcs_file): Remove unused variable ierrno.

	* add.c, checkout.c, commit.c, diff.c, edit.c, import.c,
	history.c, log.c, main.c, patch.c, release.c, remove.c, rtag.c,
	status.c, tag.c, update.c, watch.c: Pass "+" to all calls to
	getopt.  This ensures that we maintain existing behavior even with
	glibc2.

	* filesubr.c (fopen_case): Don't set *PATHP if we return an