@@ -1,3 +1,7 @@
+Sun Apr 20 23:20:37 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* commit.c (commit): Add comment regarding SEND_FORCE rationale.
+
 Sat Apr 19 17:10:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* server.c (dirswitch): If directory ends in '/', complain.
